# emoji-captcha-api

./: Cargo.toml  Dockerfile  Makefile  README.md  allowed-emojis.txt
src/: main.rs
